Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -211,7 +211,8 @@ footer {
 		}
 	footer {
 		position: fixed;
-		margin: 40px 0 0 0;
+		margin: 40px 0;
+		padding: 40px 0;
 		bottom: 0;
 		border: none;
 		background-size: 95%;
